feat: Add Web Terminal feature
